@startuml

title __SHAPES's Class Diagram__\n

  namespace shapes {
    class shapes.BotonesSet {
        - buttonCircle : JButton
        - buttonClear : JButton
        - buttonSquare : JButton
        - buttonTriangle : JButton
        + BotonesSet()
        + getButtonCircle()
        + getButtonClear()
        + getButtonSquare()
        + getButtonTriangle()
    }
  }
  

  namespace shapes {
    class shapes.CalculadoraFiguras {
        {static} + main()
    }
  }
  

  namespace shapes {
    class shapes.CalculadoraFigurasSet {
        - buttonCircle : JButton
        - buttonClear : JButton
        - buttonSquare : JButton
        - buttonTriangle : JButton
        - frame : JFrame
        - label : JLabel
        - panel : JPanel
        + CalculadoraFigurasSet()
    }
  }
  

  namespace shapes {
    interface shapes.Drawable {
        {abstract} + draw()
    }
  }
  

  namespace shapes {
    class shapes.MyCircle {
        + Area()
        + MyCircle()
        + Perimeter()
    }
  }
  

  namespace shapes {
    class shapes.MyEllipse {
        + MyEllipse()
        + draw()
    }
  }
  

  namespace shapes {
    class shapes.MyRectangle {
        + MyRectangle()
        + draw()
    }
  }
  

  namespace shapes {
    abstract class shapes.MyShape {
        # color : Color
        # height : double
        # width : double
        # x : int
        # y : int
        + Area()
        + Perimeter()
        # MyShape()
    }
  }
  

  namespace shapes {
    class shapes.MySquare {
        + MySquare()
    }
  }
  

  namespace shapes {
    class shapes.MyTriangle {
        + Area()
        + MyTriangle()
        + Perimeter()
        + draw()
    }
  }
  

  namespace shapes {
    class shapes.ventanaSet {
        ~ label : JLabel
        ~ panel : JPanel
        - frame : JFrame
        + getFrame()
        + getLabel()
        + getPanel()
        + ventanaSet()
    }
  }
  

  shapes.BotonesSet -up-|> javax.swing.JButton
  shapes.MyCircle -up-|> shapes.MyEllipse
  shapes.MyEllipse -up-|> shapes.MyShape
  shapes.MyRectangle -up-|> shapes.MyShape
  shapes.MyShape .up.|> shapes.Drawable
  shapes.MySquare -up-|> shapes.MyRectangle
  shapes.MyTriangle -up-|> shapes.MyShape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
